# simple_engine

./: .clangd  CMakeLists.txt  CMakePresets.json  build_and_run.sh  init.sh  run_tests.sh  vcpkg-configuration.json  vcpkg.json
resources/scenes/bistro/: bistro.gltf
shaders/test/: test.frag.slang  test.vert.slang
src/: main.cpp
src/core/: app.cpp  app.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  material.cpp  material.hpp  raw_texture.hpp  render_context.cpp  render_context.hpp  render_graph.cpp  render_graph.hpp
src/core/common/: material.cpp
src/core/component/: camera_component.cpp  camera_component.hpp  component.cpp  component.hpp  mesh_component.cpp  mesh_component.hpp  physics_component.cpp  physics_component.hpp  transform_component.cpp  transform_component.hpp
src/core/entity/: entity.cpp  entity.hpp
src/core/event/: collision_event.cpp  collision_event.hpp  event.hpp  event_listener.hpp
src/core/input/: input.cpp  input.hpp  key_code.hpp
src/core/render/: render_pass.cpp  render_pass.h  render_pass.hpp  render_pass_manager.cpp  render_pass_manager.h  render_pass_manager.hpp  render_target.cpp  render_target.hpp
src/core/render_graph/: graph_resource.cpp  graph_resource.hpp  render_graph.cpp  render_graph.hpp  render_pass.cpp  render_pass.hpp  render_resource.cpp  render_resource.hpp
src/core/render_pass/: example_render_pass.cpp  example_render_pass.hpp
src/core/resource/: mesh.cpp  mesh.hpp  resource.cpp  resource.hpp  resource_handle.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/core/scene/: scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp
src/core/system/: component_type_id_system.cpp  component_type_id_system.hpp  culling_system.cpp  culling_system.hpp  event_system.cpp  event_system.hpp
src/helpers/: asset_loader.cpp  asset_loader.hpp  math.cpp  math.hpp  model_loader.cpp  model_loader.hpp  resource_loader.cpp  resource_loader.hpp  scene_loader.cpp  scene_loader.hpp  vulkan_helper.cpp  vulkan_helper.hpp
tests/: test_entity_components.cpp
